feat: add profile tools, analytics flow, and deployment docs

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -4,13 +4,13 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>자주 묻는 질문 - MenuRec</title>
-<meta name="description" content="MenuRec 자주 묻는 질문(FAQ) 페이지입니다. 메뉴 추천, 슬롯머신, 언어 설정, 제휴 문의 관련 질문을 확인하세요."/>
+<meta name="description" content="MenuRec 자주 묻는 질문(FAQ) 페이지입니다. 추천 정확도, 건강/알레르기, 공유/저장, 프리미엄 리포트, 로그인/데이터 관련 질문을 확인하세요."/>
 <meta name="robots" content="index, follow"/>
 <link rel="canonical" href="https://product-builder-lecture-8pr.pages.dev/pages/faq.html"/>
 <meta property="og:type" content="website"/>
 <meta property="og:site_name" content="메뉴 추천 - Menu Recommendation"/>
 <meta property="og:title" content="자주 묻는 질문 - MenuRec"/>
-<meta property="og:description" content="MenuRec 서비스 이용 중 자주 묻는 질문과 답변을 확인하세요."/>
+<meta property="og:description" content="추천 정확도, 건강/알레르기, 공유/저장, 프리미엄 리포트, 로그인/데이터 FAQ를 확인하세요."/>
 <meta property="og:url" content="https://product-builder-lecture-8pr.pages.dev/pages/faq.html"/>
 <meta property="og:locale" content="ko_KR"/>
 <link rel="icon" type="image/svg+xml" href="/images/favicon.svg"/>
@@ -78,7 +78,7 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
     <a class="flex items-center gap-2 text-slate-600 dark:text-slate-300 hover:text-brand-purple transition-colors font-medium group" href="/index.html">
       <span class="material-symbols-outlined text-xl group-hover:-translate-x-1 transition-transform">arrow_back</span>
-      <span>메인으로 돌아가기</span>
+      <span data-i18n="backToHome">메인으로 돌아가기</span>
     </a>
     <div class="flex items-center gap-2">
       <div class="w-8 h-8 bg-gradient-to-br from-brand-purple to-brand-pink rounded-lg flex items-center justify-center text-white shadow-md shadow-purple-200">
@@ -94,40 +94,31 @@
     <div class="max-w-4xl mx-auto text-center">
       <div class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-white dark:bg-brand-cardDark border border-purple-100 dark:border-slate-700 text-brand-purple text-sm font-semibold mb-4 shadow-sm">
         <span class="w-2 h-2 rounded-full bg-brand-pink"></span>
-        FAQ
+        <span data-i18n="faqPageBadge">FAQ</span>
       </div>
-      <h1 class="text-3xl md:text-5xl font-extrabold mb-4 text-slate-900 dark:text-white">자주 묻는 질문</h1>
-      <p class="text-lg md:text-xl text-slate-600 dark:text-slate-300 font-medium max-w-2xl mx-auto">
-        MenuRec 이용 중 자주 묻는 질문을 모았습니다.
+      <h1 class="text-3xl md:text-5xl font-extrabold mb-4 text-slate-900 dark:text-white" data-i18n="faqPageTitle">자주 묻는 질문</h1>
+      <p class="text-lg md:text-xl text-slate-600 dark:text-slate-300 font-medium max-w-2xl mx-auto" data-i18n="faqPageSubtitle">
+        MenuRec 이용 중 자주 묻는 질문을 카테고리별로 확인해보세요.
       </p>
     </div>
   </section>
 
-  <section class="max-w-4xl mx-auto px-4 py-12 space-y-4">
-    <details class="bg-white dark:bg-brand-cardDark rounded-2xl border border-slate-100 dark:border-slate-700 p-5" open>
-      <summary class="font-bold text-slate-900 dark:text-white cursor-pointer">Q. MenuRec은 무료인가요?</summary>
-      <p class="mt-3 text-slate-600 dark:text-slate-300">네. 기본 메뉴 추천 기능과 커뮤니티 이용은 무료입니다.</p>
-    </details>
-    <details class="bg-white dark:bg-brand-cardDark rounded-2xl border border-slate-100 dark:border-slate-700 p-5">
-      <summary class="font-bold text-slate-900 dark:text-white cursor-pointer">Q. 추천 메뉴는 어떻게 결정되나요?</summary>
-      <p class="mt-3 text-slate-600 dark:text-slate-300">카테고리/상황 선택과 랜덤 로직을 기반으로 메뉴를 제안합니다.</p>
-    </details>
-    <details class="bg-white dark:bg-brand-cardDark rounded-2xl border border-slate-100 dark:border-slate-700 p-5">
-      <summary class="font-bold text-slate-900 dark:text-white cursor-pointer">Q. 언어는 어떻게 변경하나요?</summary>
-      <p class="mt-3 text-slate-600 dark:text-slate-300">메인 페이지 사이드바의 언어 선택 버튼에서 언제든지 변경할 수 있습니다.</p>
-    </details>
-    <details class="bg-white dark:bg-brand-cardDark rounded-2xl border border-slate-100 dark:border-slate-700 p-5">
-      <summary class="font-bold text-slate-900 dark:text-white cursor-pointer">Q. 제휴/광고 문의는 어디서 하나요?</summary>
-      <p class="mt-3 text-slate-600 dark:text-slate-300">`제휴 문의` 페이지(`pages/contact.html`)에서 양식을 작성해 주세요.</p>
-    </details>
-    <details class="bg-white dark:bg-brand-cardDark rounded-2xl border border-slate-100 dark:border-slate-700 p-5">
-      <summary class="font-bold text-slate-900 dark:text-white cursor-pointer">Q. 개인정보 관련 문의는 어디서 하나요?</summary>
-      <p class="mt-3 text-slate-600 dark:text-slate-300">개인정보처리방침 페이지를 확인하시고, 문의가 필요하면 제휴 문의 페이지를 이용해 주세요.</p>
-    </details>
+  <section class="max-w-5xl mx-auto px-4 py-12">
+    <div id="faq-category-nav" class="flex flex-wrap gap-2 mb-6" role="tablist" aria-label="FAQ categories">
+      <button type="button" class="faq-category-btn px-4 py-2 rounded-full border border-purple-200 dark:border-slate-600 bg-white dark:bg-brand-cardDark text-sm font-semibold text-slate-700 dark:text-slate-100 focus:outline-none focus-visible:ring-2 focus-visible:ring-brand-purple/40" data-category="all" data-i18n="faqCategoryAll"></button>
+      <button type="button" class="faq-category-btn px-4 py-2 rounded-full border border-purple-200 dark:border-slate-600 bg-white dark:bg-brand-cardDark text-sm font-semibold text-slate-700 dark:text-slate-100 focus:outline-none focus-visible:ring-2 focus-visible:ring-brand-purple/40" data-category="accuracy" data-i18n="faqCategoryAccuracy"></button>
+      <button type="button" class="faq-category-btn px-4 py-2 rounded-full border border-purple-200 dark:border-slate-600 bg-white dark:bg-brand-cardDark text-sm font-semibold text-slate-700 dark:text-slate-100 focus:outline-none focus-visible:ring-2 focus-visible:ring-brand-purple/40" data-category="health" data-i18n="faqCategoryHealth"></button>
+      <button type="button" class="faq-category-btn px-4 py-2 rounded-full border border-purple-200 dark:border-slate-600 bg-white dark:bg-brand-cardDark text-sm font-semibold text-slate-700 dark:text-slate-100 focus:outline-none focus-visible:ring-2 focus-visible:ring-brand-purple/40" data-category="share" data-i18n="faqCategoryShare"></button>
+      <button type="button" class="faq-category-btn px-4 py-2 rounded-full border border-purple-200 dark:border-slate-600 bg-white dark:bg-brand-cardDark text-sm font-semibold text-slate-700 dark:text-slate-100 focus:outline-none focus-visible:ring-2 focus-visible:ring-brand-purple/40" data-category="premium" data-i18n="faqCategoryPremium"></button>
+      <button type="button" class="faq-category-btn px-4 py-2 rounded-full border border-purple-200 dark:border-slate-600 bg-white dark:bg-brand-cardDark text-sm font-semibold text-slate-700 dark:text-slate-100 focus:outline-none focus-visible:ring-2 focus-visible:ring-brand-purple/40" data-category="account" data-i18n="faqCategoryAccount"></button>
+    </div>
+    <div class="space-y-3" id="faq-items" aria-live="polite"></div>
   </section>
 </main>
 
 <div id="site-footer" data-footer-current="faq"></div>
+<script src="/js/translations.js"></script>
+<script src="/js/faq-page.js"></script>
 <script src="/js/footer-loader.js"></script>
 </body>
 </html>
