--- a/pages/footer.html
+++ b/pages/footer.html
@@ -20,6 +20,8 @@
           <li><a class="hover:text-brand-purple transition-colors" href="/pages/about.html" id="about-link">브랜드 소개</a></li>
           <li><a class="hover:text-brand-purple transition-colors" href="/pages/guide.html" id="guide-link">이용 가이드</a></li>
           <li><a id="footer-planner-link" class="hover:text-brand-purple transition-colors" href="/pages/report-intake.html">식단 짜기</a></li>
+          <li><a id="footer-food-enhance-link" class="hover:text-brand-purple transition-colors" href="/pages/food-enhance.html">음식 사진 보정</a></li>
+          <li><a id="footer-profile-styler-link" class="hover:text-brand-purple transition-colors" href="/pages/profile-styler.html">프로필 스타일링</a></li>
           <li><a id="footer-slot-link" class="hover:text-brand-purple transition-colors" href="/index.html#slot">슬롯 머신</a></li>
         </ul>
       </div>
