--- a/pages/bulletin.html
+++ b/pages/bulletin.html
@@ -35,21 +35,69 @@
                     <input type="text" id="bulletin-message" placeholder="오늘 드신 맛있는 음식에 대해 이야기해주세요!" maxlength="200" required class="w-full rounded-xl border border-gray-200 dark:border-gray-600 bg-white dark:bg-gray-900 text-gray-800 dark:text-gray-100 focus:border-purple-500 focus:ring focus:ring-purple-200 dark:focus:ring-purple-800" />
                 </div>
             </div>
+            <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-3">
+                <div>
+                    <label id="bulletin-tag-menu-label" class="block text-xs font-semibold text-gray-700 dark:text-gray-200 mb-1" for="bulletin-tag-menu">메뉴 태그</label>
+                    <select id="bulletin-tag-menu" class="w-full rounded-xl border border-gray-200 dark:border-gray-600 bg-white dark:bg-gray-900 text-sm text-gray-800 dark:text-gray-100">
+                        <option value="한식">한식</option>
+                        <option value="중식">중식</option>
+                        <option value="일식">일식</option>
+                        <option value="양식">양식</option>
+                        <option value="분식">분식</option>
+                        <option value="디저트">디저트</option>
+                    </select>
+                </div>
+                <div>
+                    <label id="bulletin-tag-region-label" class="block text-xs font-semibold text-gray-700 dark:text-gray-200 mb-1" for="bulletin-tag-region">지역 태그</label>
+                    <select id="bulletin-tag-region" class="w-full rounded-xl border border-gray-200 dark:border-gray-600 bg-white dark:bg-gray-900 text-sm text-gray-800 dark:text-gray-100">
+                        <option value="서울">서울</option>
+                        <option value="경기">경기</option>
+                        <option value="부산">부산</option>
+                        <option value="대구">대구</option>
+                        <option value="기타">기타</option>
+                    </select>
+                </div>
+                <div>
+                    <label id="bulletin-tag-price-label" class="block text-xs font-semibold text-gray-700 dark:text-gray-200 mb-1" for="bulletin-tag-price">가격대 태그</label>
+                    <select id="bulletin-tag-price" class="w-full rounded-xl border border-gray-200 dark:border-gray-600 bg-white dark:bg-gray-900 text-sm text-gray-800 dark:text-gray-100">
+                        <option value="저렴">저렴</option>
+                        <option value="보통">보통</option>
+                        <option value="고급">고급</option>
+                    </select>
+                </div>
+                <div>
+                    <label id="bulletin-tag-difficulty-label" class="block text-xs font-semibold text-gray-700 dark:text-gray-200 mb-1" for="bulletin-tag-difficulty">난이도 태그</label>
+                    <select id="bulletin-tag-difficulty" class="w-full rounded-xl border border-gray-200 dark:border-gray-600 bg-white dark:bg-gray-900 text-sm text-gray-800 dark:text-gray-100">
+                        <option value="쉬움">쉬움</option>
+                        <option value="보통">보통</option>
+                        <option value="어려움">어려움</option>
+                    </select>
+                </div>
+            </div>
             <div class="flex justify-end">
                 <button type="submit" id="bulletin-submit" class="inline-flex items-center gap-2 px-5 py-2.5 rounded-xl text-white font-semibold bg-gradient-to-r from-purple-500 to-pink-500 shadow-md shadow-purple-200 dark:shadow-purple-900/40 transition-opacity hover:opacity-90 disabled:opacity-60">
                     <span>게시</span>
                     <span class="material-icons-outlined text-base">send</span>
                 </button>
             </div>
+            <p id="bulletin-form-status" class="text-xs text-gray-500 dark:text-gray-400" aria-live="polite"></p>
         </form>
     </section>
 
     <section class="space-y-4">
         <div class="flex items-center justify-between">
             <h3 class="text-xl font-bold text-gray-900 dark:text-gray-100" id="bulletin-recent-title">최근 게시글</h3>
-            <div class="flex items-center gap-2 text-sm text-gray-500 dark:text-gray-300 bg-white dark:bg-gray-800 px-3 py-1 rounded-full border border-gray-100 dark:border-gray-700 shadow-sm">
-                <span class="material-icons-outlined text-base animate-spin text-purple-500">sync</span>
-                <span class="font-medium" id="bulletin-realtime">실시간 업데이트 중</span>
+            <div class="flex items-center gap-2">
+                <label id="bulletin-sort-label" class="text-xs font-semibold text-gray-600 dark:text-gray-300" for="bulletin-sort">정렬</label>
+                <select id="bulletin-sort" class="rounded-xl border border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-800 px-2.5 py-1.5 text-xs text-gray-700 dark:text-gray-200">
+                    <option value="latest">최신</option>
+                    <option value="popular">인기(좋아요)</option>
+                    <option value="comments">댓글수</option>
+                </select>
+                <div class="flex items-center gap-2 text-sm text-gray-500 dark:text-gray-300 bg-white dark:bg-gray-800 px-3 py-1 rounded-full border border-gray-100 dark:border-gray-700 shadow-sm">
+                    <span class="material-icons-outlined text-base animate-spin text-purple-500">sync</span>
+                    <span class="font-medium" id="bulletin-realtime">실시간 업데이트 중</span>
+                </div>
             </div>
         </div>
 
@@ -57,4 +105,22 @@
             <div class="bulletin-loading text-center text-sm text-gray-500 dark:text-gray-400 py-8" id="bulletin-loading">게시물을 불러오는 중...</div>
         </div>
     </section>
+
+    <div id="bulletin-report-modal" class="hidden fixed inset-0 z-40 bg-black/40 backdrop-blur-sm p-4">
+        <div class="max-w-sm mx-auto mt-24 rounded-2xl border border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-800 p-4 shadow-xl">
+            <h4 id="bulletin-report-title" class="text-base font-bold text-gray-900 dark:text-gray-100 mb-2">게시글 신고</h4>
+            <label id="bulletin-report-reason-label" for="bulletin-report-reason" class="text-xs font-semibold text-gray-600 dark:text-gray-300">사유 선택</label>
+            <select id="bulletin-report-reason" class="mt-1 w-full rounded-xl border border-gray-200 dark:border-gray-600 bg-white dark:bg-gray-900 text-sm text-gray-800 dark:text-gray-100">
+                <option value="spam">스팸/광고</option>
+                <option value="abuse">욕설/혐오</option>
+                <option value="illegal">불법/유해</option>
+                <option value="other">기타</option>
+            </select>
+            <p id="bulletin-report-feedback" class="mt-2 text-xs text-gray-500 dark:text-gray-400"></p>
+            <div class="mt-3 flex justify-end gap-2">
+                <button id="bulletin-report-cancel" type="button" class="px-3 py-2 text-xs font-semibold rounded-lg border border-gray-300 dark:border-gray-600">취소</button>
+                <button id="bulletin-report-submit" type="button" class="px-3 py-2 text-xs font-semibold rounded-lg text-white bg-rose-500">신고</button>
+            </div>
+        </div>
+    </div>
 </section>
