--- a/pages/mypage.html
+++ b/pages/mypage.html
@@ -14,7 +14,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet"/>
 <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script defer src="/js/runtime-config.js?v=20260218d"></script>
+<script defer src="/js/runtime-config.js?v=20260219a"></script>
+<script defer src="/js/user-profile-store.js?v=20260219a"></script>
 <script>
   tailwind.config = {
     darkMode: 'class',
@@ -104,6 +105,6 @@
 
 <div id="site-footer" data-footer-current="auth"></div>
 <script defer src="/js/footer-loader.js"></script>
-<script defer src="/js/mypage.js?v=20260218d"></script>
+<script defer src="/js/mypage.js?v=20260219b"></script>
 </body>
 </html>
