--- a/pages/payment.html
+++ b/pages/payment.html
@@ -57,6 +57,7 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KR2HW49NF0"></script>
 <script src="/js/analytics/gtag.js"></script>
 <script src="/js/analytics/clarity.js"></script>
+<script defer src="/js/analytics.js?v=20260219a"></script>
 <script>
   (function() {
     const saved = localStorage.getItem('theme');
@@ -173,6 +174,6 @@
 
 <div id="site-footer" data-footer-current="planner"></div>
 <script src="/js/footer-loader.js"></script>
-<script defer src="/js/polar-worker-checkout.js?v=20260216h"></script>
+<script defer src="/js/polar-worker-checkout.js?v=20260219a"></script>
 </body>
 </html>
