--- a/pages/report-result.html
+++ b/pages/report-result.html
@@ -57,6 +57,7 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KR2HW49NF0"></script>
 <script src="/js/analytics/gtag.js"></script>
 <script src="/js/analytics/clarity.js"></script>
+<script defer src="/js/analytics.js?v=20260219a"></script>
 <script>
   (function() {
     const saved = localStorage.getItem('theme');
@@ -99,6 +100,8 @@
         <div class="mt-2 h-2 w-full rounded-full bg-sky-100 dark:bg-sky-950/60 overflow-hidden">
           <div id="report-progress-bar" class="h-full w-1/4 bg-gradient-to-r from-sky-500 to-indigo-500 transition-all duration-500"></div>
         </div>
+        <div id="report-flow-states" class="mt-3 flex flex-wrap gap-1.5 text-[11px]"></div>
+        <div id="report-quality-badges" class="mt-2 flex flex-wrap gap-1.5"></div>
         <p id="report-email-hint" class="mt-2 text-xs text-sky-900/90 dark:text-sky-200/90"></p>
         <p id="report-order-hint" class="mt-1 text-xs text-sky-900/90 dark:text-sky-200/90"></p>
       </div>
@@ -107,18 +110,32 @@
         <div id="report-content-text" class="text-sm text-slate-600 dark:text-slate-300 leading-relaxed">리포트 내용을 준비 중입니다.</div>
       </div>
 
+      <div id="report-next-actions" class="mt-3 hidden rounded-xl border border-amber-200 bg-amber-50/80 dark:border-amber-800 dark:bg-amber-950/20 p-3">
+        <p class="text-xs font-semibold text-amber-800 dark:text-amber-200">다음 행동을 선택하세요</p>
+        <div class="mt-2 flex flex-wrap gap-2">
+          <button id="result-retry-btn" type="button" class="inline-flex items-center gap-1 rounded-lg border border-amber-300 bg-white px-3 py-2 text-xs font-semibold text-amber-800 hover:bg-amber-50 dark:border-amber-700 dark:bg-amber-900/40 dark:text-amber-200 dark:hover:bg-amber-900">
+            <span class="material-symbols-outlined text-base">refresh</span>
+            재시도
+          </button>
+          <a href="/pages/contact.html" class="inline-flex items-center gap-1 rounded-lg border border-slate-300 bg-white px-3 py-2 text-xs font-semibold text-slate-700 hover:bg-slate-50 dark:border-indigo-700 dark:bg-indigo-900/50 dark:text-slate-200 dark:hover:bg-indigo-900">
+            <span class="material-symbols-outlined text-base">support_agent</span>
+            문의하기
+          </a>
+        </div>
+      </div>
+
       <div class="mt-4 flex flex-wrap items-center gap-2">
         <button id="result-share-btn" type="button" class="inline-flex items-center gap-1 rounded-lg border border-slate-200 bg-white px-3 py-2 text-xs font-semibold text-slate-700 hover:bg-slate-50 dark:border-indigo-700 dark:bg-indigo-900/50 dark:text-slate-200 dark:hover:bg-indigo-900">
           <span class="material-symbols-outlined text-base">share</span>
-          공유하기
+          <span id="result-share-btn-label">공유하기</span>
         </button>
         <button id="result-save-btn" type="button" class="inline-flex items-center gap-1 rounded-lg border border-slate-200 bg-white px-3 py-2 text-xs font-semibold text-slate-700 hover:bg-slate-50 dark:border-indigo-700 dark:bg-indigo-900/50 dark:text-slate-200 dark:hover:bg-indigo-900">
           <span class="material-symbols-outlined text-base">download</span>
-          저장하기
+          <span id="result-save-btn-label">저장하기</span>
         </button>
         <button id="result-resend-btn" type="button" class="inline-flex items-center gap-1 rounded-lg border border-slate-200 bg-white px-3 py-2 text-xs font-semibold text-slate-700 hover:bg-slate-50 disabled:opacity-60 dark:border-indigo-700 dark:bg-indigo-900/50 dark:text-slate-200 dark:hover:bg-indigo-900">
           <span class="material-symbols-outlined text-base">mail</span>
-          이메일로 보내기
+          <span id="result-resend-btn-label">이메일로 보내기</span>
         </button>
       </div>
       <p id="result-action-status" class="mt-2 text-xs text-slate-500 dark:text-slate-400" aria-live="polite"></p>
@@ -130,6 +147,6 @@
 <script src="/js/footer-loader.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
-<script defer src="/js/report-result.js?v=20260217b"></script>
+<script defer src="/js/report-result.js?v=20260219b"></script>
 </body>
 </html>
