chore(seo): align ninanoo domain signals and sitemap

--- a/pages/cookies.html
+++ b/pages/cookies.html
@@ -6,12 +6,12 @@
 <title>쿠키 정책 - MenuRec</title>
 <meta name="description" content="MenuRec 쿠키 정책입니다. 쿠키 사용 목적, 유형, 관리 방법 및 사용자의 선택권을 안내합니다."/>
 <meta name="robots" content="noindex, follow"/>
-<link rel="canonical" href="https://product-builder-lecture-8pr.pages.dev/pages/cookies.html"/>
+<link rel="canonical" href="https://ninanoo.com/pages/cookies.html"/>
 <meta property="og:type" content="website"/>
 <meta property="og:site_name" content="메뉴 추천 - Menu Recommendation"/>
 <meta property="og:title" content="쿠키 정책 - MenuRec"/>
 <meta property="og:description" content="MenuRec의 쿠키 사용 방식과 관리 방법을 안내합니다."/>
-<meta property="og:url" content="https://product-builder-lecture-8pr.pages.dev/pages/cookies.html"/>
+<meta property="og:url" content="https://ninanoo.com/pages/cookies.html"/>
 <meta property="og:locale" content="ko_KR"/>
 <link rel="icon" type="image/svg+xml" href="/images/favicon.svg"/>
 <link rel="icon" type="image/x-icon" href="/images/favicon.ico"/>
