--- a/pages/faq.html
+++ b/pages/faq.html
@@ -6,12 +6,12 @@
 <title>자주 묻는 질문 - MenuRec</title>
 <meta name="description" content="MenuRec 자주 묻는 질문(FAQ) 페이지입니다. 추천 정확도, 건강/알레르기, 공유/저장, 프리미엄 리포트, 로그인/데이터 관련 질문을 확인하세요."/>
 <meta name="robots" content="index, follow"/>
-<link rel="canonical" href="https://product-builder-lecture-8pr.pages.dev/pages/faq.html"/>
+<link rel="canonical" href="https://ninanoo.com/pages/faq.html"/>
 <meta property="og:type" content="website"/>
 <meta property="og:site_name" content="메뉴 추천 - Menu Recommendation"/>
 <meta property="og:title" content="자주 묻는 질문 - MenuRec"/>
 <meta property="og:description" content="추천 정확도, 건강/알레르기, 공유/저장, 프리미엄 리포트, 로그인/데이터 FAQ를 확인하세요."/>
-<meta property="og:url" content="https://product-builder-lecture-8pr.pages.dev/pages/faq.html"/>
+<meta property="og:url" content="https://ninanoo.com/pages/faq.html"/>
 <meta property="og:locale" content="ko_KR"/>
 <link rel="icon" type="image/svg+xml" href="/images/favicon.svg"/>
 <link rel="icon" type="image/x-icon" href="/images/favicon.ico"/>
