--- a/pages/guide.html
+++ b/pages/guide.html
@@ -7,12 +7,12 @@
 <meta name="description" content="상황별, 계절별, 건강 목표별 메뉴 선택 가이드. 혼밥, 데이트, 가족 식사, 다이어트 등 다양한 상황에 맞는 완벽한 메뉴를 찾아보세요."/>
 <meta name="keywords" content="메뉴 가이드, 음식 추천, 상황별 메뉴, 계절별 음식, 건강 식단, 혼밥 메뉴, 데이트 메뉴"/>
 <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1"/>
-<link rel="canonical" href="https://product-builder-lecture-8pr.pages.dev/pages/guide.html"/>
+<link rel="canonical" href="https://ninanoo.com/pages/guide.html"/>
 <meta property="og:type" content="article"/>
 <meta property="og:site_name" content="메뉴 추천 - Menu Recommendation"/>
 <meta property="og:title" content="음식 가이드 - 메뉴 선택 완벽 가이드"/>
 <meta property="og:description" content="상황별, 계절별, 건강 목표별 메뉴 선택 가이드. 완벽한 메뉴를 찾아보세요."/>
-<meta property="og:url" content="https://product-builder-lecture-8pr.pages.dev/pages/guide.html"/>
+<meta property="og:url" content="https://ninanoo.com/pages/guide.html"/>
 <meta property="og:image" content="https://ninanoo.com/images/og-image-keywords-alt.svg"/>
 <meta property="og:locale" content="ko_KR"/>
 <meta name="twitter:card" content="summary_large_image"/>
