--- a/pages/help.html
+++ b/pages/help.html
@@ -6,7 +6,7 @@
 <title>도움말 센터 - MenuRec</title>
 <meta name="description" content="MenuRec 도움말 센터입니다. 자주 발생하는 문제 해결 방법과 이용 가이드를 확인하세요."/>
 <meta name="robots" content="index, follow"/>
-<link rel="canonical" href="https://product-builder-lecture-8pr.pages.dev/pages/help.html"/>
+<link rel="canonical" href="https://ninanoo.com/pages/help.html"/>
 <link rel="icon" type="image/svg+xml" href="/images/favicon.svg"/>
 <link rel="icon" type="image/x-icon" href="/images/favicon.ico"/>
 <link rel="preconnect" href="https://fonts.googleapis.com"/>
