--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 
     <!-- 캐노니컬 URL -->
-    <link rel="canonical" href="https://product-builder-lecture-8pr.pages.dev/">
+    <link rel="canonical" href="https://ninanoo.com/">
 
     <!-- 언어 및 지역 -->
     <meta http-equiv="content-language" content="ko">
-    <link rel="alternate" hreflang="ko" href="https://product-builder-lecture-8pr.pages.dev/">
-    <link rel="alternate" hreflang="x-default" href="https://product-builder-lecture-8pr.pages.dev/">
+    <link rel="alternate" hreflang="ko" href="https://ninanoo.com/">
+    <link rel="alternate" hreflang="x-default" href="https://ninanoo.com/">
 
     <!-- 오픈 그래프 / 페이스북 -->
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="메뉴 추천 - Menu Recommendation">
     <meta property="og:title" content="오늘 메뉴 추천 | 오늘 뭐 먹지?">
     <meta property="og:description" content="오늘 뭐 먹지? 버튼 하나로 200가지 이상의 맛있는 메뉴를 랜덤 추천받으세요! 18개 언어 지원.">
-    <meta property="og:url" content="https://product-builder-lecture-8pr.pages.dev/">
+    <meta property="og:url" content="https://ninanoo.com/">
     <meta property="og:image" content="https://ninanoo.com/images/og-image-keywords-alt.svg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
