--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,12 +6,12 @@
 <title>제휴 문의 - MenuRec</title>
 <meta name="description" content="MenuRec 제휴 문의 페이지입니다. 광고/협업/사업 제안을 남겨주세요."/>
 <meta name="robots" content="index, follow"/>
-<link rel="canonical" href="https://product-builder-lecture-8pr.pages.dev/pages/contact.html"/>
+<link rel="canonical" href="https://ninanoo.com/pages/contact.html"/>
 <meta property="og:type" content="website"/>
 <meta property="og:site_name" content="메뉴 추천 - Menu Recommendation"/>
 <meta property="og:title" content="제휴 문의 - MenuRec"/>
 <meta property="og:description" content="MenuRec과 함께 성장할 파트너를 찾습니다."/>
-<meta property="og:url" content="https://product-builder-lecture-8pr.pages.dev/pages/contact.html"/>
+<meta property="og:url" content="https://ninanoo.com/pages/contact.html"/>
 <meta property="og:locale" content="ko_KR"/>
 <link rel="icon" type="image/svg+xml" href="/images/favicon.svg"/>
 <link rel="icon" type="image/x-icon" href="/images/favicon.ico"/>
