--- a/pages/payment.html
+++ b/pages/payment.html
@@ -6,12 +6,12 @@
 <title>결제 - MenuRec</title>
 <meta name="description" content="MenuRec 결제 화면입니다. 안전하게 Polar 체크아웃으로 이동합니다."/>
 <meta name="robots" content="index, follow"/>
-<link rel="canonical" href="https://product-builder-lecture-8pr.pages.dev/pages/payment.html"/>
+<link rel="canonical" href="https://ninanoo.com/pages/payment.html"/>
 <meta property="og:type" content="website"/>
 <meta property="og:site_name" content="메뉴 추천 - Menu Recommendation"/>
 <meta property="og:title" content="결제 - MenuRec"/>
 <meta property="og:description" content="Polar 체크아웃으로 안전하게 결제를 진행하세요."/>
-<meta property="og:url" content="https://product-builder-lecture-8pr.pages.dev/pages/payment.html"/>
+<meta property="og:url" content="https://ninanoo.com/pages/payment.html"/>
 <meta property="og:locale" content="ko_KR"/>
 <link rel="icon" type="image/svg+xml" href="/images/favicon.svg"/>
 <link rel="icon" type="image/x-icon" href="/images/favicon.ico"/>
