--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -6,12 +6,12 @@
 <title>개인정보처리방침 - MenuRec</title>
 <meta name="description" content="메뉴 추천 서비스의 개인정보처리방침입니다. 수집하는 정보, 사용 목적, 보호 방법 등을 안내합니다."/>
 <meta name="robots" content="noindex, follow"/>
-<link rel="canonical" href="https://product-builder-lecture-8pr.pages.dev/pages/privacy.html"/>
+<link rel="canonical" href="https://ninanoo.com/pages/privacy.html"/>
 <meta property="og:type" content="website"/>
 <meta property="og:site_name" content="메뉴 추천 - Menu Recommendation"/>
 <meta property="og:title" content="개인정보처리방침 - 메뉴 추천"/>
 <meta property="og:description" content="메뉴 추천 서비스의 개인정보처리방침입니다."/>
-<meta property="og:url" content="https://product-builder-lecture-8pr.pages.dev/pages/privacy.html"/>
+<meta property="og:url" content="https://ninanoo.com/pages/privacy.html"/>
 <meta property="og:locale" content="ko_KR"/>
 <link rel="icon" type="image/svg+xml" href="/images/favicon.svg"/>
 <link rel="icon" type="image/x-icon" href="/images/favicon.ico"/>
