--- a/pages/terms.html
+++ b/pages/terms.html
@@ -6,12 +6,12 @@
 <title>이용약관 - MenuRec</title>
 <meta name="description" content="메뉴 추천 서비스의 이용약관입니다. 서비스 이용 조건, 이용자 의무, 면책 사항 등을 안내합니다."/>
 <meta name="robots" content="noindex, follow"/>
-<link rel="canonical" href="https://product-builder-lecture-8pr.pages.dev/pages/terms.html"/>
+<link rel="canonical" href="https://ninanoo.com/pages/terms.html"/>
 <meta property="og:type" content="website"/>
 <meta property="og:site_name" content="메뉴 추천 - Menu Recommendation"/>
 <meta property="og:title" content="이용약관 - 메뉴 추천"/>
 <meta property="og:description" content="메뉴 추천 서비스의 이용약관입니다."/>
-<meta property="og:url" content="https://product-builder-lecture-8pr.pages.dev/pages/terms.html"/>
+<meta property="og:url" content="https://ninanoo.com/pages/terms.html"/>
 <meta property="og:locale" content="ko_KR"/>
 <link rel="icon" type="image/svg+xml" href="/images/favicon.svg"/>
 <link rel="icon" type="image/x-icon" href="/images/favicon.ico"/>
